Fix problem with navbar on mobile, where the site would be slightly wider than the screen, and also clean the html code a bit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,9 @@ html {
     margin: 0;
 }
 
-.main {
-    padding: 0;
-    margin-top: 75px; /* To avoid the navbar overlapping with the page */
+main {
+    padding: 0 !important;
+    margin-top: 75px !important; /* To avoid the navbar overlapping with the page */
 }
 
 /*------ GENERAL ------*/
@@ -33,6 +33,16 @@ h2, h3, h4, h5, h6 {
     font-weight: 600;
 }
 
+img {
+    max-width: 100%;
+    overflow: hidden;
+}
+
+a:hover {
+    text-decoration: none;
+    color: white;
+}
+
 .heading {
         font-size: 1.8rem;
     }
@@ -43,11 +53,6 @@ h2, h3, h4, h5, h6 {
 
 .uppercase {
     text-transform: uppercase;
-}
-
-img {
-    max-width: 100%;
-    overflow: hidden;
 }
 
 .note {
@@ -73,9 +78,12 @@ img {
 /*------ BUTTON STYLES ------*/
 
 .btn-generic {
+    display: inline-block;
     border: 0;
     border-radius: 5px;
     color: white;
+    font-weight: 400;
+    text-align: center;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
 }
 
@@ -106,6 +114,7 @@ img {
     position: fixed;
     width: 100%;
     top: 0;
+    margin: 0 !important;
 }
 
 .navbar .navbar-toggler {
@@ -151,8 +160,13 @@ a.nav-link {
 .iss-image {
     background: url(../images/iss_tourist.jpeg) no-repeat center center;
     color: white;
+    
     background-size: cover;
     overflow: hidden;
+}
+
+.iss-image * p, .iss-image * h1 {
+    text-shadow: 1px 1px 2px #000000;
 }
 
 .moon-image {
@@ -160,6 +174,10 @@ a.nav-link {
     color: white;
     background-size: cover;
     overflow: hidden;
+}
+
+.moon-image * p, .moon-image * h1 {
+    text-shadow: 1px 1px 2px #000000;
 }
 
 /*------ TECHNOLOGY SECTION ------*/
@@ -170,6 +188,7 @@ a.nav-link {
     overflow: hidden;
     height: 450px;
     color: white;
+    text-shadow: 1px 1px 2px #000000;
     font-weight: 500;
 }
 
